--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 10px;
     grid-auto-rows: minmax(100px, auto);
+    place-content: center;
 }
 
 .button {
