--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body {
     display: grid;
     place-content: center;
     height: 100vh;
-    background-image: linear-gradient(to bottom, #C472FF,#FF79E6), url('./assets/bg-image.png');
+    background-image: linear-gradient(to bottom, #C472FFAA,#FF79E6AA), url('./assets/bg-image.png');
     background-position: center;
 }
 
